# fat_piggy_bank

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
public/: index.html
src/: App.css  App.tsx  \  csv_parser.rs  engine.rs  importer.rs  main.rs  view.rs
src/engine/: model.rs  template.rs  tokenizer.rs
src/snapshots/: fat_piggy_bank__tests__array_template_substitution.snap  fat_piggy_bank__view__tests__array_template_substitution.snap
src/templates/: comparison.html  package-lock.json  report.html  styles.css  tsconfig.json
src/templates/src/: index.ts
src/test_data/: baseline.csv  target.csv
