[package]
name = "fat_piggy_bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34"
regex = "1.10.5"
unicode-segmentation = "1.11.0"

[dev-dependencies]
insta = "1.39.0"
